src/Components/Events/Main.css
.element-2 {
    display: flex;
    margin-left: 30px;
    justify-content: flex-start;
    align-items: center;
    gap: 3rem;
}

.element-3 {
    text-align: justify;
    font-size: large;
}

.element-1 {
    text-align: justify;
    font-size: large;
}

.round-rules {
    display: flex;
    flex-direction: row;
    /* justify-content: space-between; */
}




.info-detail {
    margin: 10px;
}

.element-4 {
    display: flex;
    align-items: center;
}

.coord {
    list-style: none;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    /* width: 50%; */

}


.element-5 {
    display: flex;
    flex-direction: row;
    margin-right: 30px;
}

.sep {
    display: flex;
    flex-direction: row;
    gap: 2rem;
    margin-left: 40px;
}

.link {
    display: flex;
    flex-direction: column;
}

button {
    background-color: #cc93a3;
    border: none;
    position: relative;
    padding: 0.5rem;
    justify-self: center;
}

